--- a/src/main/resources/reportes/solis.jrxml
+++ b/src/main/resources/reportes/solis.jrxml
@@ -4,13 +4,15 @@
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Matadero"/>
 	<parameter name="logo64" class="java.lang.String"/>
+	<parameter name="fecha_ini" class="java.sql.Date"/>
+	<parameter name="fecha_fin" class="java.sql.Date"/>
 	<queryString language="SQL">
 		<![CDATA[Select ap_paterno,ap_materno, nombre, fecha, 
 	   	cantidad, cat.tipo, tasa, cantidad, total, estado_pago, precio
 		From orden ord
 		join contribuyente co on co.id_contribuyente = ord.id_contribuyente
 		join categoria cat on cat.id_categoria = ord.id_categoria
---where fecha between '2024-10-01' and '2024-11-04']]>
+		where fecha between $P{fecha_ini} and $P{fecha_fin}]]>
 	</queryString>
 	<field name="nombre" class="java.lang.String"/>
 	<field name="fecha" class="java.sql.Date"/>
@@ -22,6 +24,9 @@
 	<field name="precio" class="java.math.BigDecimal"/>
 	<field name="estado_pago" class="java.lang.String"/>
 	<field name="tipo" class="java.lang.String"/>
+	<variable name="total1" class="java.math.BigDecimal" calculation="Sum">
+		<variableExpression><![CDATA[$F{total}]]></variableExpression>
+	</variable>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -214,16 +219,31 @@
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch">
+		<band height="3" splitType="Stretch">
 			<line>
 				<reportElement x="-15" y="0" width="585" height="1" uuid="22b00a2e-03f9-4578-bf8c-b4c55eb00692"/>
 			</line>
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="54" splitType="Stretch"/>
+		<band splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="40" splitType="Stretch">
+			<textField>
+				<reportElement x="510" y="0" width="60" height="20" uuid="81f12d8c-332f-4409-af71-891b8d974418"/>
+				<textElement textAlignment="Center">
+					<font size="11" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{total1}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="450" y="3" width="70" height="17" uuid="ec83edf1-5add-425e-b4b5-fec0385fdfb4"/>
+				<textElement>
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[TOTAL:]]></text>
+			</staticText>
+		</band>
 	</summary>
 </jasperReport>
