--- a/src/main/resources/reportes/orden.jrxml
+++ b/src/main/resources/reportes/orden.jrxml
@@ -7,7 +7,7 @@
 	<parameter name="uuid" class="java.lang.String"/>
 	<parameter name="user" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[select fecha, cantidad, ord.precio, total, ord.uuid, ap_paterno, ap_materno, nombre, nro_carnet, ci_expedido,
+		<![CDATA[select fecha, cantidad, ord.precio, total, ord.uuid, primer_apellido, segundo_apellido, nombre, numero_documento, expedido,
 	   	tipo, cat.precio, estado_pago, tasa 	
 		from ORDEN ord
 		join contribuyente con on con.id_contribuyente = ord.id_contribuyente
@@ -18,11 +18,11 @@
 	<field name="cantidad" class="java.lang.Integer"/>
 	<field name="precio" class="java.math.BigDecimal"/>
 	<field name="total" class="java.math.BigDecimal"/>
-	<field name="ap_paterno" class="java.lang.String"/>
-	<field name="ap_materno" class="java.lang.String"/>
+	<field name="primer_apellido" class="java.lang.String"/>
+	<field name="segundo_apellido" class="java.lang.String"/>
 	<field name="nombre" class="java.lang.String"/>
-	<field name="nro_carnet" class="java.lang.String"/>
-	<field name="ci_expedido" class="java.lang.String"/>
+	<field name="numero_documento" class="java.lang.String"/>
+	<field name="expedido" class="java.lang.String"/>
 	<field name="tipo" class="java.lang.String"/>
 	<field name="estado_pago" class="java.lang.String"/>
 	<field name="tasa" class="java.lang.String"/>
@@ -258,7 +258,7 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{ap_paterno}+" "+$F{ap_materno}+" "+$F{nombre}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{primer_apellido}+" "+$F{segundo_apellido}+" "+$F{nombre}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="60" y="200" width="180" height="1" uuid="eb670026-f2cb-4d42-9879-317d0a332f61"/>
@@ -307,7 +307,7 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{ap_paterno}+" "+$F{ap_materno}+" "+$F{nombre}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{primer_apellido}+" "+$F{segundo_apellido}+" "+$F{nombre}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="100" y="131" width="99" height="30" uuid="9b5a8396-3234-4325-b8ab-0a58e57fb707">
@@ -320,7 +320,7 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{nro_carnet}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{numero_documento}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="199" y="131" width="60" height="30" uuid="ead0fc0a-38c0-49be-96eb-307a049b79d1">
@@ -333,7 +333,7 @@
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{ci_expedido}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{expedido}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="491" y="0" width="79" height="30" uuid="65d3809e-c0cc-4cf6-90b5-678617b5649a">
